[package]
name = "adr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
reqwest = { version = "0.12.4", default-features = false, features = [
    "rustls-tls",
    "json",
] }
scraper = "0.19.0"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.86"
regex = "1.10.4"
lazy_static = "1.4.0"
strum = { version = "0.26.2", features = ["strum_macros", "derive"] }
heck = "0.5.0"
printpdf = { version = "0.7.0", features = ["font_subsetting"] }
itertools = "0.13.0"
chrono = { version = "0.4.38", features = ["serde"] }
lopdf = "0.33.0"
pdf-doc = "0.1.2"
